[gd_scene load_steps=6 format=3 uid="uid://dheui57ydhnj5"]

[ext_resource type="Theme" uid="uid://dw7ft4xik3rji" path="res://Assets/Theme/Normal.tres" id="1_32wn5"]
[ext_resource type="Script" path="res://Script/UI/SettingUi.gd" id="2_y1dtf"]
[ext_resource type="PackedScene" uid="uid://bwegnxa4rtgh2" path="res://Scene/UI/TitleBar.tscn" id="4_faym6"]
[ext_resource type="LabelSettings" uid="uid://c1lap0u84heih" path="res://Assets/LabelSetting/UITitle.tres" id="4_kj60p"]
[ext_resource type="LabelSettings" uid="uid://buvwr4pla8wi1" path="res://Assets/LabelSetting/BigWhite.tres" id="5_1yx0u"]

[node name="SettingUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_32wn5")
script = ExtResource("2_y1dtf")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"SharpPanel"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleBar" parent="Panel/VBoxContainer" instance=ExtResource("4_faym6")]
unique_name_in_owner = true
layout_mode = 2
title_text = "设置"

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 80

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "声音"
label_settings = ExtResource("4_kj60p")
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2
color = Color(0.490196, 0.47451, 0.423529, 1)

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="MainSound" type="MarginContainer" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer2/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer2/VBoxContainer2/MainSound"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 100
alignment = 1

[node name="Label" type="Label" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer2/VBoxContainer2/MainSound/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "主音量"
label_settings = ExtResource("5_1yx0u")
horizontal_alignment = 2

[node name="MainSoundSlider" type="HSlider" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer2/VBoxContainer2/MainSound/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 40)
layout_mode = 2
size_flags_vertical = 1
max_value = 1.0
step = 0.01
value = 0.8

[node name="Sep" type="ColorRect" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer2/VBoxContainer2"]
custom_minimum_size = Vector2(600, 2)
layout_mode = 2
size_flags_horizontal = 4
color = Color(0.917647, 0.913725, 0.894118, 1)

[node name="Sfx" type="MarginContainer" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer2/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer2/VBoxContainer2/Sfx"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 100
alignment = 1

[node name="Label" type="Label" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer2/VBoxContainer2/Sfx/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "音效"
label_settings = ExtResource("5_1yx0u")
horizontal_alignment = 2

[node name="SfxSlider" type="HSlider" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer2/VBoxContainer2/Sfx/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 40)
layout_mode = 2
size_flags_vertical = 1
max_value = 1.0
step = 0.01
value = 0.8

[node name="Sep2" type="ColorRect" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer2/VBoxContainer2"]
custom_minimum_size = Vector2(600, 2)
layout_mode = 2
size_flags_horizontal = 4
color = Color(0.917647, 0.913725, 0.894118, 1)

[node name="Music" type="MarginContainer" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer2/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer2/VBoxContainer2/Music"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 100
alignment = 1

[node name="Label" type="Label" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer2/VBoxContainer2/Music/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "音乐"
label_settings = ExtResource("5_1yx0u")
horizontal_alignment = 2

[node name="MusicSlider" type="HSlider" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer2/VBoxContainer2/Music/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 40)
layout_mode = 2
size_flags_vertical = 1
max_value = 1.0
step = 0.01
value = 0.8

[node name="Sep3" type="ColorRect" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer2/VBoxContainer2"]
custom_minimum_size = Vector2(600, 2)
layout_mode = 2
size_flags_horizontal = 4
color = Color(0.917647, 0.913725, 0.894118, 1)

[node name="CdKey" type="MarginContainer" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 250
theme_override_constants/margin_right = 250

[node name="CdKeyBtn" type="Button" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer2/CdKey"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "兑换码"
